@@ -57,10 +57,9 @@ class ActiveRecord::Base
   def self.hobo_model
     include Hobo::Model
   end
-  def self.hobo_user_model(login_attr=nil, &b)
+  def self.hobo_user_model
     include Hobo::Model
     include Hobo::User
-    set_login_attr(login_attr, &b) if login_attr
   end
 end
 
